styled contact form

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -16,11 +16,17 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
-    <form method="POST"  action="{% url 'contact' %}" class="form mb-2">
-        {% csrf_token %}
-        {{ contact_form | crispy }}
-        <button class="btn btn-black rounded-0" type="submit">Send</button>
-    </form>
+<div class="container form-container py-5">
+    <h2 class="text-center">Contact Us!</h2>
+    <div class="row">
+        <div class="col-12 col-md-8 offset-md-2">
+            <form method="POST"  action="{% url 'contact' %}" class="form text-center mb-2">
+                {% csrf_token %}
+                {{ contact_form | crispy }}
+                <button class="btn form-button" type="submit">Send</button>
+            </form>
+        </div>
+    </div>
+    
 </div>
 {% endblock %}
