--- a/bag/templates/bag/shopping-bag.html
+++ b/bag/templates/bag/shopping-bag.html
@@ -16,12 +16,10 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container mb-2">
+    <div class="container product-container mb-5">
         <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Shopping Bag</h2>
-                <hr>
+            <div class="col text-center">
+                <h2 class="logo-font mt-3 mb-4">Shopping Bag</h2>
             </div>
         </div>
         <div class="row">
@@ -112,7 +110,7 @@
                                         Keep Shopping!
                                     </span>
                                 </a>
-                                <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
+                                <a href="{% url 'checkout' %}" class="btn form-button btn-lg">
                                     <span class="text-uppercase"> Continue to Secure Checkout</span>
                                     <span class="icon">
                                         <i class="fas fa-lock"></i>
