--- a/products/templates/products/add_a_product.html
+++ b/products/templates/products/add_a_product.html
@@ -16,18 +16,17 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
+    <div class="container form-container">
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 offset-md-3 text-center">
                 <hr>
-                <h2 class="logo-font mb-4">Product Management</h2>
+                <h2 class="mb-4">Product Management</h2>
                 <h5 class="text-muted">Add a Product</h5>
                 <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 offset-md-3 text-center">
                 <form method="POST" action="{% url 'add_a_product' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
@@ -37,9 +36,9 @@
                             {{ field }}
                         {% endif %}
                     {% endfor %}
-                    <div class="text-right">
+                    <div class="text-center">
                         <a href="{ url 'products' }" class="btn btn-outline-black rounded-0">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Add Product</button>
+                        <button class="btn form-button" type="submit">Add Product</button>
                     </div>
                 </form>
             </div>
