styled button on form

--- a/products/templates/products/single_product_detail.html
+++ b/products/templates/products/single_product_detail.html
@@ -111,7 +111,7 @@
                                         Keep Shopping
                                     </span>
                                 </a>
-                                <input type="submit" class="btn form-button rounded-0 text-uppercase mt-5" value="Add to Bag">
+                                <input type="submit" class="btn form-button text-uppercase mt-5" value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
