--- a/profiles/templates/profiles/user-profile.html
+++ b/profiles/templates/profiles/user-profile.html
@@ -20,30 +20,29 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
+    <div class="container product-container">
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">My Profile</h2>
+                <h2 class="text-center mb-4">My Profile</h2>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-lg-6">
-                <p class="text-muted">
+                <p class="text-muted text-center">
                     Default Delivery Information
                 </p>
-                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                <form class="mt-3 text-center" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-black rounded-o text-uppercase float-right">
+                    <button class="btn form-button text-uppercase">
                         Update Information
                     </button>
                 </form>
             </div>
             <div class="col-12 col-lg-6">
-                <p class="text-muted">
+                <p class="text-muted text-center">
                     Order History
                 </p>
                 <div class="order-history table-responsive">
