styled allauth templates

--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -2,12 +2,13 @@
 
 {% block content %}
     <div class="container header-container">
-        <div class="overlay"></div>
         <div class="row">
-            <div class="col-12 col-md-6">
-                <div class="allauth-form-inner-content">
-                    {% block inner_content %}
-                    {% endblock %}
+            <div class="col-12 col-md-6 offset-md-3 text-center">
+                <div class="container info-container my-5">
+                    <div class="allauth-form-inner-content">
+                        {% block inner_content %}
+                        {% endblock %}
+                    </div>
                 </div>
             </div>
         </div>
