--- a/bag/templates/bag/shopping-bag.html
+++ b/bag/templates/bag/shopping-bag.html
@@ -15,11 +15,10 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
     <div class="container product-container mb-5">
         <div class="row">
             <div class="col text-center">
-                <h2 class="logo-font mt-3 mb-4">Shopping Bag</h2>
+                <h2 class="mt-3 mb-4">Shopping Bag</h2>
             </div>
         </div>
         <div class="row">
