--- a/bag/templates/bag/shopping-bag.html
+++ b/bag/templates/bag/shopping-bag.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container product-container mb-5">
+    <div class="container content-container">
         <div class="row">
             <div class="col text-center">
                 <h2 class="mt-3 mb-4">Shopping Bag</h2>
@@ -120,8 +120,8 @@
                     </table>
                     </div>
                 {% else %}
-                    <p class="lead mb-5">Your bag is empty.</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                    <p class="lead text-center mb-5">Your bag is empty.</p>
+                    <a href="{% url 'products' %}" class="btn form-button btn-lg">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
