added home image, fixed css classes and margin/padding

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,10 +14,11 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+<div class="home-background">
+    <div class="container-fluid home-content h-100">
         <div class="row h-100">
             <div class="col-12 my-auto text-center">
-                <h1 class="display-5 uppercase text-black">
+                <h1 class="display-5 my-3 uppercase text-black">
                     Welcome to your One Stop Shop! Everything you need, all in one place!
                 </h1>
                 <h4>
@@ -31,4 +32,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
