--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -20,7 +20,7 @@
     {% for n in news %}
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="mt-3">{{ n.title|title }}</h2>
+                <h2 class="my-3">{{ n.title|title }}</h2>
                 <h6 class="text-muted">Published By: {{ n.author|title }} on {{ n.date }}</h6>
                 {% if user.is_superuser %}
                     <a href="{% url 'edit_news' news_id=n.id %}">Edit</a> |
@@ -43,7 +43,7 @@
                 {% endif %}
             </div>
         </div>
-        <hr class="w-60">
+        <hr>
     {% endfor %}
 </div>
 {% endblock %}
