--- a/products/templates/products/single_product_detail.html
+++ b/products/templates/products/single_product_detail.html
@@ -32,8 +32,8 @@
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ product.name }}</p>
+                <div class="mb-5 mt-md-5">
+                    <p class="mb-0 text-right">{{ product.name }}</p>
                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
                     {% if product.category %}
                         <p class="small mt-1 mb-0">
@@ -53,7 +53,7 @@
                             <a href="{% url 'delete_a_product' product.id %}" class="text-danger">Delete</a>
                         </small>
                     {% endif %}
-                    <p class="mt-3">{{ product.description }}</p>
+                    <p class="mt-3 text-right">{{ product.description }}</p>
                     <form class="form" action="{% url 'add_item_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
