fixed css classes

--- a/profiles/templates/profiles/user-profile.html
+++ b/profiles/templates/profiles/user-profile.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container product-container">
+    <div class="container content-container">
         <div class="row">
             <div class="col">
                 <hr>
